// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`point.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "ival": {},
                "location": 113,
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "extra_float_digits",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 7 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 130,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 120,
            "relname": "point_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 142,
                          "sval": {
                            "sval": "asdfasdf",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 24,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "point_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "(10.0 10.0)",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 24,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "point_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "(10.0, 10.0) x",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 24,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "point_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "(10.0,10.0",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "cols": [
            {
              "ResTarget": {
                "location": 24,
                "name": "f1",
              },
            },
          ],
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "point_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "(10.0, 1e+500)",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 33,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 26,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 26,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 29,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 20,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 20,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 47,
                },
              },
              "location": 52,
              "name": [
                {
                  "String": {
                    "sval": "<<",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 55,
                  "sval": {
                    "sval": "(0.0, 0.0)",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 30,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 21,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 21,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "A_Const": {
                  "location": 48,
                  "sval": {
                    "sval": "(0.0,0.0)",
                  },
                },
              },
              "location": 60,
              "name": [
                {
                  "String": {
                    "sval": ">>",
                  },
                },
              ],
              "rexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 63,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 27,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 18,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 18,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "A_Const": {
                  "location": 45,
                  "sval": {
                    "sval": "(0.0,0.0)",
                  },
                },
              },
              "location": 57,
              "name": [
                {
                  "String": {
                    "sval": "|>>",
                  },
                },
              ],
              "rexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 61,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 27,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 18,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 18,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 45,
                },
              },
              "location": 50,
              "name": [
                {
                  "String": {
                    "sval": "<<|",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 54,
                  "sval": {
                    "sval": "(0.0, 0.0)",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 27,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 18,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 18,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 45,
                },
              },
              "location": 50,
              "name": [
                {
                  "String": {
                    "sval": "~=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 53,
                  "sval": {
                    "sval": "(5.1, 34.5)",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 34,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 25,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 25,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 55,
                },
              },
              "location": 60,
              "name": [
                {
                  "String": {
                    "sval": "<@",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 67,
                      "sval": {
                        "sval": "(0,0,100,100)",
                      },
                    },
                  },
                  "location": -1,
                  "typeName": {
                    "location": 63,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 18,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 43,
                      "sval": {
                        "sval": "(0,0,100,100)",
                      },
                    },
                  },
                  "location": -1,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              "location": 59,
              "name": [
                {
                  "String": {
                    "sval": "@>",
                  },
                },
              ],
              "rexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 62,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 18,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 43,
                      },
                    },
                    "location": 48,
                    "name": [
                      {
                        "String": {
                          "sval": "<@",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 55,
                            "sval": {
                              "sval": "(0,0,100,100)",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 51,
                          "names": [
                            {
                              "String": {
                                "sval": "box",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              ],
              "boolop": "NOT_EXPR",
              "location": 39,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 18,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "p",
                      },
                    },
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 44,
              "name": [
                {
                  "String": {
                    "sval": "<@",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 52,
                      "sval": {
                        "sval": "[(0,0),(-10,0),(-10,10)]",
                      },
                    },
                  },
                  "location": -1,
                  "typeName": {
                    "location": 47,
                    "names": [
                      {
                        "String": {
                          "sval": "path",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 18,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 47,
                            "sval": {
                              "sval": "(0,0,100,100)",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 43,
                          "names": [
                            {
                              "String": {
                                "sval": "box",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                    "location": 63,
                    "name": [
                      {
                        "String": {
                          "sval": "@>",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 66,
                      },
                    },
                  },
                },
              ],
              "boolop": "NOT_EXPR",
              "location": 39,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p",
                },
                "inh": true,
                "location": 54,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "dist",
                        },
                      },
                    ],
                    "location": 78,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 15,
                "name": "dist",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 15,
                      },
                    },
                    "location": 20,
                    "name": [
                      {
                        "String": {
                          "sval": "<->",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 30,
                            "sval": {
                              "sval": "(0,0)",
                            },
                          },
                        },
                        "location": -1,
                        "typeName": {
                          "location": 24,
                          "names": [
                            {
                              "String": {
                                "sval": "point",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 58 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p1",
                },
                "inh": true,
                "location": 75,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p2",
                },
                "inh": true,
                "location": 89,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "dist",
                        },
                      },
                    ],
                    "location": 114,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Indirection": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 120,
                      },
                    },
                    "indirection": [
                      {
                        "A_Indices": {
                          "uidx": {
                            "A_Const": {
                              "ival": {},
                              "location": 126,
                            },
                          },
                        },
                      },
                    ],
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Indirection": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 130,
                      },
                    },
                    "indirection": [
                      {
                        "A_Indices": {
                          "uidx": {
                            "A_Const": {
                              "ival": {},
                              "location": 136,
                            },
                          },
                        },
                      },
                    ],
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "point1",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p1",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 26,
                "name": "point2",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p2",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 26,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 43,
                "name": "dist",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 43,
                      },
                    },
                    "location": 49,
                    "name": [
                      {
                        "String": {
                          "sval": "<->",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 53,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p1",
                },
                "inh": true,
                "location": 50,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p2",
                },
                "inh": true,
                "location": 64,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "name": "point1",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p1",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 26,
                "name": "point2",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p2",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 26,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p1",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 87,
                    },
                  },
                  "location": 93,
                  "name": [
                    {
                      "String": {
                        "sval": "<->",
                      },
                    },
                  ],
                  "rexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p2",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 97,
                    },
                  },
                },
              },
              "location": 104,
              "name": [
                {
                  "String": {
                    "sval": ">",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 3,
                  },
                  "location": 106,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p1",
                },
                "inh": true,
                "location": 167,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p2",
                },
                "inh": true,
                "location": 181,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "distance",
                        },
                      },
                    ],
                    "location": 256,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Indirection": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 266,
                      },
                    },
                    "indirection": [
                      {
                        "A_Indices": {
                          "uidx": {
                            "A_Const": {
                              "ival": {},
                              "location": 272,
                            },
                          },
                        },
                      },
                    ],
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "A_Indirection": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 276,
                      },
                    },
                    "indirection": [
                      {
                        "A_Indices": {
                          "uidx": {
                            "A_Const": {
                              "ival": {},
                              "location": 282,
                            },
                          },
                        },
                      },
                    ],
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 95,
                "name": "point1",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p1",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 95,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 112,
                "name": "point2",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p2",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 112,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 129,
                "name": "distance",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 130,
                      },
                    },
                    "location": 136,
                    "name": [
                      {
                        "String": {
                          "sval": "<->",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 140,
                      },
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "p1",
                                },
                              },
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 204,
                          },
                        },
                        "location": 210,
                        "name": [
                          {
                            "String": {
                              "sval": "<->",
                            },
                          },
                        ],
                        "rexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "p2",
                                },
                              },
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 214,
                          },
                        },
                      },
                    },
                    "location": 221,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 3,
                        },
                        "location": 223,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 229,
                      },
                    },
                    "location": 235,
                    "name": [
                      {
                        "String": {
                          "sval": "<<",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 238,
                      },
                    },
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 225,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 72 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p1",
                },
                "inh": true,
                "location": 167,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
            {
              "RangeVar": {
                "alias": {
                  "aliasname": "p2",
                },
                "inh": true,
                "location": 181,
                "relname": "point_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "distance",
                        },
                      },
                    ],
                    "location": 276,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 95,
                "name": "point1",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p1",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 95,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 112,
                "name": "point2",
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "p2",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 112,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 129,
                "name": "distance",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 130,
                      },
                    },
                    "location": 136,
                    "name": [
                      {
                        "String": {
                          "sval": "<->",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 140,
                      },
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "p1",
                                },
                              },
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 204,
                          },
                        },
                        "location": 210,
                        "name": [
                          {
                            "String": {
                              "sval": "<->",
                            },
                          },
                        ],
                        "rexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "p2",
                                },
                              },
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 214,
                          },
                        },
                      },
                    },
                    "location": 221,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 3,
                        },
                        "location": 223,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 229,
                      },
                    },
                    "location": 235,
                    "name": [
                      {
                        "String": {
                          "sval": "<<",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 238,
                      },
                    },
                  },
                },
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p1",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 248,
                      },
                    },
                    "location": 254,
                    "name": [
                      {
                        "String": {
                          "sval": "|>>",
                        },
                      },
                    ],
                    "rexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "p2",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 258,
                      },
                    },
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 225,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 87,
            "relname": "point_gist_tbl",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "f1",
                "is_local": true,
                "location": 102,
                "typeName": {
                  "location": 105,
                  "names": [
                    {
                      "String": {
                        "sval": "point",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "point_gist_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeFunction": {
                    "functions": [
                      {
                        "List": {
                          "items": [
                            {
                              "FuncCall": {
                                "args": [
                                  {
                                    "A_Const": {
                                      "ival": {},
                                      "location": 64,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1000,
                                      },
                                      "location": 66,
                                    },
                                  },
                                ],
                                "funcformat": "COERCE_EXPLICIT_CALL",
                                "funcname": [
                                  {
                                    "String": {
                                      "sval": "generate_series",
                                    },
                                  },
                                ],
                                "location": 48,
                              },
                            },
                            {},
                          ],
                        },
                      },
                    ],
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 35,
                    "val": {
                      "A_Const": {
                        "location": 35,
                        "sval": {
                          "sval": "(0,0)",
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 82 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "gist",
          "idxname": "point_gist_tbl_index",
          "indexParams": [
            {
              "IndexElem": {
                "name": "f1",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 38,
            "relname": "point_gist_tbl",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 83 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "point_gist_tbl",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "location": 36,
                          "sval": {
                            "sval": "(0.0000009,0.0000009)",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 84 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 23,
                "sval": {
                  "sval": "true",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "enable_seqscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 85 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 25,
                "sval": {
                  "sval": "false",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "enable_indexscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 26,
                "sval": {
                  "sval": "false",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "enable_bitmapscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 87 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "point_gist_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 43,
                },
              },
              "location": 46,
              "name": [
                {
                  "String": {
                    "sval": "~=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 49,
                      "sval": {
                        "sval": "(0.0000009,0.0000009)",
                      },
                    },
                  },
                  "location": 72,
                  "typeName": {
                    "location": 74,
                    "names": [
                      {
                        "String": {
                          "sval": "point",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 88 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "point_gist_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 43,
                },
              },
              "location": 46,
              "name": [
                {
                  "String": {
                    "sval": "<@",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 49,
                      "sval": {
                        "sval": "(0.0000009,0.0000009),(0.0000009,0.0000009)",
                      },
                    },
                  },
                  "location": 94,
                  "typeName": {
                    "location": 96,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 89 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "point_gist_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 43,
                },
              },
              "location": 46,
              "name": [
                {
                  "String": {
                    "sval": "~=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 49,
                      "sval": {
                        "sval": "(0.0000018,0.0000018)",
                      },
                    },
                  },
                  "location": 72,
                  "typeName": {
                    "location": 74,
                    "names": [
                      {
                        "String": {
                          "sval": "point",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 90 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 23,
                "sval": {
                  "sval": "false",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "enable_seqscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 91 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 25,
                "sval": {
                  "sval": "true",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "enable_indexscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 92 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 26,
                "sval": {
                  "sval": "true",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "enable_bitmapscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 93 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "point_gist_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 43,
                },
              },
              "location": 46,
              "name": [
                {
                  "String": {
                    "sval": "~=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 49,
                      "sval": {
                        "sval": "(0.0000009,0.0000009)",
                      },
                    },
                  },
                  "location": 72,
                  "typeName": {
                    "location": 74,
                    "names": [
                      {
                        "String": {
                          "sval": "point",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 94 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "point_gist_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 43,
                },
              },
              "location": 46,
              "name": [
                {
                  "String": {
                    "sval": "<@",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 49,
                      "sval": {
                        "sval": "(0.0000009,0.0000009),(0.0000009,0.0000009)",
                      },
                    },
                  },
                  "location": 94,
                  "typeName": {
                    "location": 96,
                    "names": [
                      {
                        "String": {
                          "sval": "box",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 95 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 22,
                "relname": "point_gist_tbl",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "agg_star": true,
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "count",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "f1",
                      },
                    },
                  ],
                  "location": 43,
                },
              },
              "location": 46,
              "name": [
                {
                  "String": {
                    "sval": "~=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 49,
                      "sval": {
                        "sval": "(0.0000018,0.0000018)",
                      },
                    },
                  },
                  "location": 72,
                  "typeName": {
                    "location": 74,
                    "names": [
                      {
                        "String": {
                          "sval": "point",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 96 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "kind": "VAR_RESET",
          "name": "enable_seqscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 97 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "kind": "VAR_RESET",
          "name": "enable_indexscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 98 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "kind": "VAR_RESET",
          "name": "enable_bitmapscan",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 99 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 60,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 78,
                          "sval": {
                            "sval": "1,y",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 85,
                          "sval": {
                            "sval": "point",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "pg_input_is_valid",
                        },
                      },
                    ],
                    "location": 60,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`point.sql > line 102 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeFunction": {
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "1,y",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "location": 42,
                                  "sval": {
                                    "sval": "point",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "pg_input_error_info",
                                },
                              },
                            ],
                            "location": 15,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;
